--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ h2 {
   font-weight: bold;
 }
 
-.nextPreviousPokemon {
+button {
   display: inline-block;
   padding: 0.3em 1.2em;
   margin: 0 0.1em 0.1em 0;
