fixed hard-coded variable in getPokemon so now switching generations works dynamically

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
   align-items: center;
 }
 
-/* Generation Dropdown */
+/* Generation Dropdown (MatUI) */
 
 .MuiListItemText-secondary {
   font-weight: 800 !important;
